--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Panda Clock</title>
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="/style/panda.css">
-    <link rel="stylesheet" href="/style/digital.css">
-    <link rel="stylesheet" href="/style/scroll.css">
+    <link rel="stylesheet" href="style/panda.css">
+    <link rel="stylesheet" href="style/digital.css">
+    <link rel="stylesheet" href="style/scroll.css">
     <!-- stylesheet -->
 
     <link rel="icon" type="image/png" sizes="16x16" href="public/logo.png">
@@ -63,6 +63,6 @@
 
     </div>
 
-    <script src="/clock.js" />
+    <script src="clock.js" />
 </body>
 </html>
