--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
     <link rel="stylesheet" href="style/panda.css" />
     <link rel="stylesheet" href="style/digital.css" />
     <link rel="stylesheet" href="style/scroll.css" />
+    <link rel="stylesheet" href="style/profile.css" />
     <!-- stylesheet -->
 
     <link rel="icon" type="image/png" sizes="16x16" href="public/logo.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap"
-      rel="stylesheet"
-    />
-
-    <style></style>
   </head>
   <body>
+    <div id="profile">
+      <div id="img-container">
+        <img id="pp" src="public/swadesh.jpg" alt="Swadesh" />
+        <img id="status" src="public/logo.png" alt="Panda" />
+      </div>
+      <h3>Swadesh</h3>
+      <a href="https://github.com/Swadesh-Panda">Swadesh-Panda</a>
+
+      <div style="margin: 20px 0px">
+        <p>Web Developer || Game Developer</p>
+      </div>
+    </div>
+
     <div id="clock-container">
       <div class="face">
         <div class="ears">
